--- a/carrier_segmentation.ipynb
+++ b/carrier_segmentation.ipynb
@@ -1958,6 +1958,20 @@
    "id": "57c74e20",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fc3ac67",
+   "metadata": {},
+   "source": [
+    "| Segment Name          | Included Labels | Key Traits                                                                 | Recommendations                                                                 |\n",
+    "|-----------------------|-----------------|----------------------------------------------------------------------------|---------------------------------------------------------------------------------|\n",
+    "| **Volume Powerhouses** | 2, 4           | High shipments (5-7 avg.), moderate rel. (~0.45-0.50), ncm ~0.5-1.0       | Core for bulk lanes; negotiate volume discounts but mandate rel. SLAs (e.g., >0.50 delivery). Monitor ncm quarterly—~25% of capacity. |\n",
+    "| **Reliable Scalers**  | 6              | Solid volume (5 avg.), best-in-class ncm (0.06), rel. ~0.50                | Go-to partners for growth routes; premium pricing justified by low errors. Expand usage to 15-20% portfolio. |\n",
+    "| **Elite Specialists** | 0              | Low volume (1.3 avg.), elite rel. (0.98/0.97), near-zero ncm (0.03)       | Niche/high-value assignments (e.g., urgent air/sea); loyalty incentives. ~20% for quality-critical shipments. |\n",
+    "| **Feedback Focus**    | 3, 7           | Low volume (1.2 avg.), split rel. (high feedback in 3, delivery in 7), low ncm (~0.03-0.11) | Branding/PR plays; survey boosts for 7's feedback gap. Test in customer-facing pilots (~15% mix). |\n",
+    "| **Risk/Watchlist**    | 1, 5           | Lowest volume/reliab. (0.01-0.22), highest ncm (0.13-2.42)                | Overflow/backup only (<10% allocation); audit 5 urgently (high errors). Phase out if no improvement. |"
+   ]
   }
  ],
  "metadata": {
